# ai-wizard

./: .cursorrules  .dockerignore  .env.example  .env.test  .gitignore  .learnings  .pre-commit-config.yaml  Dockerfile  Dockerfile.app  README.md  definition.md  iam-deployment-role.yaml  main.tf  pyproject.toml  test.yaml  variables.tf
.github/scripts/: analyze-workflow-error.py  analyze-workflow-errors.sh  check-gh-user.sh  check_aws_log_event_errors.sh  monitor-workflows.sh  push-changes.sh
.github/workflows/: backend-ci-cd.yml  ci-cd-deploy-backend-lambda.yml  ci-cd-deploy-backend.yml  ci-cd-logging-infrastructure.yml  ci-cd-shared-infrastructure.yml  ci-cd-test-build-backend.yml  ci-cd-test-build-frontend.yml  ci-cd-test-build-push-backend.yml  ci-cd.yml
app/: main.py
app/api/: auth.py
app/api/endpoints/: projects.py
app/models/: ai_interaction.py
app/schemas/: __init__.py  project.py  user.py
app/services/: ai_interaction_service.py
backend/: .dockerignore  Dockerfile  README.md  create_lambda_package.sh  main.py  main.tf  pyproject.toml  pytest.ini  terraform.tfvars  variables.tf  zappa_settings.json  zappa_settings.json.example
backend/app/: .env.example  lambda_handler.py  main.py  pyproject.toml
backend/app/api/: __init__.py  auth.py  router.py
backend/app/api/endpoints/: __init__.py  ai.py  ai_interactions.py  logs.py  projects.py  users.py
backend/app/core/: config.py  firebase.py  logging_config.py
backend/app/db/: database.py  init_db.py
backend/app/middleware/: logging.py
backend/app/models/: __init__.py  ai_interaction.py  base.py  project.py  user.py  user_profile.py
backend/app/openapi/: specification.yaml
backend/app/schemas/: __init__.py  ai_interaction.py  project.py  user.py
backend/app/services/: __init__.py  ai_interaction_service.py  ai_service.py  auth_service.py  project_service.py  user_service.py
backend/app/utils/: logging_config.py
backend/aws-iam/: cf-ai-wizard-deployment-role.yaml
backend/aws-setup/: cf-ai-wizard-deployment-role.yaml  cf-ai-wizard-private-ecr.yaml  setup.sh
backend/docker/: Dockerfile
backend/terraform/: main.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
backend/terraform/api/: specification.yaml
backend/terraform/environments/dev/: backend.tf  main.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
backend/terraform/environments/prod/: backend.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars  terraform.tfvars.example
backend/terraform/environments/test/: backend.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
backend/terraform/lambda/: create_lambda_package.sh  lambda_handler.py
backend/terraform/lambda/app/: lambda_handler.py
backend/terraform/modules/backend/: main.tf  outputs.tf  variables.tf
backend/terraform/modules/backend/api/: specification.yaml
backend/terraform/modules/backend/lambda/: create_lambda_package.sh
backend/terraform/modules/frontend/: main.tf  outputs.tf  variables.tf
backend/terraform/modules/logging/: iam.tf  main.tf  outputs.tf  variables.tf
backend/terraform/modules/shared/: main.tf  outputs.tf  variables.tf
backend/tests/: ai-code-rules.md  conftest.py  test_config.py  test_project_service.py
backend/tests/api/endpoints/: test_ai.py  test_ai_interactions.py  test_logs.py  test_projects.py
backend/tests/services/: test_ai_service.py  test_auth_service.py  test_project_service.py  test_user_service.py
copilot/: advanced-ai-ruleset.md  learnings.md  openai-gpt-4o-rulesset.md  repository-history.md
docs/development/: codebase_evaluation.md  codebase_summary.md
frontend/: .env.example  .env.test  .env.test.example  cypress.config.ts  jest.config.js  jest.setup.tsx  package-lock.json  package.json  rsbuild.config.ts  tsconfig.jest.json  tsconfig.json  tsconfig.node.json
frontend/cypress/e2e/: api.cy.ts
frontend/cypress/support/: commands.ts  index.d.ts
frontend/public/: index.html
frontend/src/: App.js  App.js.tmp  App.tsx  api.ts  api.tsx  config.d.tsx  config.ts  config.tsx  env.d.ts  globals.d.ts  jest.polyfills.js  jest.setup.ts  setupTests.tsx
frontend/src/__mocks__/: env.tsx  punycode.js
frontend/src/__mocks__/auth/: fedcmAuth.tsx  index.ts  mockFactory.ts
frontend/src/__mocks__/config/: env.ts
frontend/src/__mocks__/env/: index.ts
frontend/src/__mocks__/firebase/: analytics.ts  app.ts  auth.ts  auth.tsx  config.ts  firestore.ts
frontend/src/__tests__/: AIInteractions.test.tsx  App.test.tsx  AuthContext.test.tsx  Header.test.tsx  Home.test.tsx  Projects.test.tsx  api.test.ts  api.test.tsx  fedcmAuth.test.ts  fedcmAuth.test.tsx  firebase.test.ts  logging.test.ts  useApi.test.ts  useApi.test.tsx
frontend/src/auth/: fedcmAuth.d.tsx  fedcmAuth.js  fedcmAuth.js.tmp  fedcmAuth.ts  fedcmAuth.tsx
frontend/src/components/: Header.tsx  PrivateRoute.tsx
frontend/src/config/: env.tsx  firebase.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useApi.ts  useApi.tsx
frontend/src/hooks/__mocks__/: useApi.ts
frontend/src/pages/: AIInteractions.tsx  Account.tsx  Home.tsx  Projects.tsx
frontend/src/services/: logging.ts
frontend/src/testUtils/: mockCleanup.ts
frontend/src/types/: aiInteraction.d.ts  aiInteraction.ts  api.d.ts  auth.d.ts  auth.ts  firebase-auth.d.ts  firebase.d.ts  google-auth.d.ts  google-auth.ts  jest-setup.d.ts  jest.d.ts  project.ts  test-env.d.ts
frontend/src/validation/: aiInteraction.ts
scripts/: __init__.py  add_missing_docstrings.py  aggregate_logs.py  analyze_logs.py  check_aws_log_event_errors.py  check_openapi_version.py  generate_openapi_spec.py  update_dependencies.py  validate_pipeline_dirs.py
tests/: conftest.py  test_user_service.py
