[tool.poetry]
name = "ai-wizard"
version = "0.1.0"
description = "AI Wizard - Rapid Application Assistant"
authors = ["Dominikus Nold <dominikus@nold-family.de>"]
packages = [
    { include = "app" },
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
sqlalchemy = "^1.4.23"
pydantic = "^1.8.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
openai = "^0.27.0"
psycopg2-binary = "^2.9.1"
python-dotenv = "^0.19.0"
alembic = "^1.7.5"
email-validator = "^2.2.0"
bcrypt = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.7b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
mypy = "^0.910"
pytest-cov = "^2.12.1"
python-dotenv = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
pythonpath = [
  "."
]